Renamings + Postman collection

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 spring.main.banner-mode=off
-target.api.url=http://sixth:8080
-spring.application.name=fifth
+target.api.url=http://appb:8080
+spring.application.name=appa
